# DesktopScreen

./: CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  main.c
main/include/application/: display.h
main/include/driver/: battery.h  bsp_gpio.h  buzzer.h  debug_log.h  flash.h  ft6336.h  screen.h  wifi_station.h
main/include/hal/: bsp_gpio.h  bsp_i2c.h  bsp_spi.h
main/src/application/: display.c
main/src/driver/: battery.c  bsp_gpio.c  buzzer.c  debug_log.c  flash.c  ft6336.c  screen.c  wifi_station.c
main/src/hal/: bsp_gpio.c  bsp_i2c.c  bsp_spi.c
